--- a/sse-build-resources.vcxproj
+++ b/sse-build-resources.vcxproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ext\AddressLibrary.cpp" />
+    <ClCompile Include="ext\IHook.cpp" />
     <ClCompile Include="ext\PerfCounter.cpp" />
     <ClCompile Include="ext\RTTI.cpp" />
     <ClCompile Include="skse64\skse64\skse64\BSModelDB.cpp" />
