--- a/sse-build-resources.vcxproj
+++ b/sse-build-resources.vcxproj
@@ -35,6 +35,7 @@
     <ClInclude Include="ext\ICommon.h" />
     <ClInclude Include="ext\IHook.h" />
     <ClInclude Include="ext\JITASM.h" />
+    <ClInclude Include="ext\Patching.h" />
     <ClInclude Include="ext\PerfCounter.h" />
     <ClInclude Include="ext\RTTI.h" />
     <ClInclude Include="ext\versiondb.h" />
@@ -98,6 +99,7 @@
     <ClCompile Include="ext\AddressLibrary.cpp" />
     <ClCompile Include="ext\IHook.cpp" />
     <ClCompile Include="ext\JITASM.cpp" />
+    <ClCompile Include="ext\Patching.cpp" />
     <ClCompile Include="ext\PerfCounter.cpp" />
     <ClCompile Include="ext\RTTI.cpp" />
     <ClCompile Include="skse64\skse64\skse64\BSModelDB.cpp" />
