--- a/sse-build-resources.vcxproj.filters
+++ b/sse-build-resources.vcxproj.filters
@@ -198,6 +198,9 @@
     <ClInclude Include="ext\Patching.h">
       <Filter>ext</Filter>
     </ClInclude>
+    <ClInclude Include="ext\ITasks.h">
+      <Filter>ext</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ext\AddressLibrary.cpp">
