--- a/sse-build-resources.vcxproj
+++ b/sse-build-resources.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="skse64\skse64\skse64\PapyrusNativeFunctions.h" />
     <ClInclude Include="skse64\skse64\skse64\PapyrusValue.h" />
     <ClInclude Include="skse64\skse64\skse64\PapyrusVM.h" />
+    <ClInclude Include="skse64\skse64\skse64\PluginAPI.h" />
     <ClInclude Include="skse64\skse64\skse64\ScaleformAPI.h" />
     <ClInclude Include="skse64\skse64\skse64\ScaleformCallbacks.h" />
     <ClInclude Include="skse64\skse64\skse64\ScaleformExtendedData.h" />
